# skilltest-buienradar

./: .$ERD.drawio.dtmp  .gitignore  ERD.drawio  pyproject.toml
devenv/: devenv.nix
src/: .env  analyser.py  main.py
src/api/: client.py
src/database/: client.py  database.db
