[tool.poetry]
name = "skilltest-buienradar"
version = "0.1.0"
description = "Dutch Weather Analyzer"
authors = ["miroaccgh <wabysaby@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
sqlmodel = "^0.0.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
